--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa": "^2.2.0",
     "koa-body": "^4.0.7",
     "koa-router": "^7.2.0",
+    "koa-send": "^4.1.0",
     "koa2-static-middleware": "^1.0.3"
   }
 }
